--- a/student_class.ipynb
+++ b/student_class.ipynb
@@ -752,19 +752,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## this is great, but we haven't actually *stored* any information. Writing this to a file would be helpful!"
+    "----"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "----"
+    "## this is great, but we haven't actually *stored* any information. Writing this to a file would be helpful!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,9 +788,9 @@
     "        if course not in self.courses:\n",
     "            self.courses.append(course) ## append a list; we don't want repeats!\n",
     "        else:\n",
-    "            print(f\"{self.first_name} is already \\\n",
-    "enrolled in the {course} course\")\n",
+    "            print(f\"{self.first_name} is already enrolled in the {course} course\")\n",
     "            \n",
+    "    \n",
     "    def remove_course(self, course):\n",
     "        if course in self.courses:\n",
     "            self.courses.remove(course)\n",
@@ -800,8 +800,8 @@
     "    \n",
     "    def __len__(self): ## it's a dunder, so len(lee) --> lee.__len__()\n",
     "        return len(self.courses)\n",
-    "     \n",
-    "        \n",
+    "      \n",
+    "    \n",
     "    def __repr__(self):\n",
     "        \"\"\"This has been fused quite often with the __str__() method.\n",
     "        It also provides a string representation of the object,\n",
@@ -819,7 +819,240 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First name: mashrur,         Last name: hossain,         Courses: Python, Ruby, Javascript\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mashrur)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = \"data.txt\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prep_record(line):\n",
+    "    line = line.split(\":\") ## name on left, courses on right\n",
+    "    first_name, last_name = line[0].split(\",\")\n",
+    "    course_details = line[1].rstrip().split(\",\")\n",
+    "    \n",
+    "    return first_name, last_name, course_details"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prep_to_write(first_name, last_name, courses):\n",
+    "    full_name = first_name + ',' + last_name\n",
+    "    courses = \",\".join(courses)\n",
+    "    \n",
+    "    return full_name + ':' + courses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_write = prep_to_write('lee', 'shibley', ['python', 'ruby', 'java'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lee,shibley:python,ruby,java\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(to_write)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mashrur,hossain:python,ruby,javascript\n",
+      "mashrur hossain ['python', 'ruby', 'javascript']\n",
+      "john,doe:java,c++,c\n",
+      "john doe ['java', 'c++', 'c']\n",
+      "evgeny,rahman:ruby,rails,javascript\n",
+      "evgeny rahman ['ruby', 'rails', 'javascript']\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(file_name) as f:\n",
+    "    for line in f:\n",
+    "        print(line.strip())\n",
+    "        first_name, last_name, course_details = prep_record(line)\n",
+    "        print(first_name, last_name, course_details)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now that we have our functions coded up, let's add them to the Student class!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## final version of Student class\n",
+    "\n",
+    "class Student:\n",
+    "    \n",
+    "    def __init__(self, first, last, courses = None): ## these are the attributes each instance will have\n",
+    "        \"\"\"2 underscores is a \"dunder method\".\n",
+    "        \n",
+    "        `self` is the instance that's passed in; by convention, called self.\n",
+    "        \n",
+    "        Attributes include first name, last name, and courses (which can be None, or a list of courses).\n",
+    "        \"\"\"\n",
+    "        self.first_name = first\n",
+    "        self.last_name = last\n",
+    "        if courses == None: ## courses the function parameter\n",
+    "            self.courses = [] ## empty list\n",
+    "        else:\n",
+    "            self.courses = courses\n",
+    "        \n",
+    "    \n",
+    "    def add_course(self, course):\n",
+    "        if course not in self.courses: ## we don't want repeats\n",
+    "            self.courses.append(course) ## append a list\n",
+    "        else:\n",
+    "            print(f\"{self.first_name} is already enrolled in the {course} course\")\n",
+    "            \n",
+    "    \n",
+    "    def remove_course(self, course):\n",
+    "        if course in self.courses:\n",
+    "            self.courses.remove(course)\n",
+    "        else:\n",
+    "            print(f\"course {course} not found\")\n",
+    "    \n",
+    "    \n",
+    "    def add_to_file(self, filename):\n",
+    "        if self.find_in_file(filename):\n",
+    "            return \"Record already exists\" ## once you hit a `return` statement, the function halts\n",
+    "        else:\n",
+    "            record_to_add = Student.prep_to_write(self.first_name, self.last_name, self.courses)\n",
+    "            with open(filename, \"a+\") as to_write:\n",
+    "                to_write.write(record_to_add + '\\n') ## new student record to add, plus the newline character\n",
+    "    \n",
+    "    \n",
+    "    def find_in_file(self, filename):\n",
+    "        with open(filename) as f:\n",
+    "            for line in f:\n",
+    "                first_name, last_name, course_details = Student.prep_record(line.strip())\n",
+    "                student_read_in = Student(first_name, last_name, course_details)\n",
+    "                if self == student_read_in: ## see function `__eq__()` below within this class for notes on behavior of `==` \n",
+    "                    return True ## the student was found in the list of students in the file\n",
+    "            return False ## once you hit a `return` line, the function halts, so you'll only get here if it never found the student\n",
+    "    \n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def prep_to_write(first_name, last_name, courses):\n",
+    "        full_name = first_name + ',' + last_name\n",
+    "        courses = \",\".join(courses)\n",
+    "        return full_name + ':' + courses\n",
+    "    \n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def prep_record(line):\n",
+    "        \"\"\"This function is tied to our Student class, in that it's performing the conversion of student records we have in our class,\n",
+    "        but it doesn't really have any association with our Student class or an instance of the Student class.\n",
+    "        \n",
+    "        Said another way: Students have records, and those records must be prepped;\n",
+    "        but a Student doesn't have the attribute or functionality of prepping those records\n",
+    "        (unlike the attribues of their name, or behavior of adding/removing courses).\n",
+    "        \n",
+    "        When you have a function that is tied to the Class but not actually associated with it,\n",
+    "        we call it a *static method* and put `@staticmethod` above the `def` line.\n",
+    "        \n",
+    "        Static methods can be referenced anywhere else in the Class, but must have the class name before it.\n",
+    "        i.e., `Student.prep_record(**args)`, not just `prep_record(**args)`.\n",
+    "        \"\"\"\n",
+    "        line = line.split(\":\") ## name on left, courses on right\n",
+    "        first_name, last_name = line[0].split(\",\")\n",
+    "        course_details = line[1].rstrip().split(\",\")\n",
+    "\n",
+    "        return first_name, last_name, course_details\n",
+    "    \n",
+    "    \n",
+    "    def __eq__(self, other):\n",
+    "        \"\"\"This is a dunder method for Python's `==` notation. This changes the functionality of `==` within the Student class,\n",
+    "        specifically for the `find_in_file()` function above.\n",
+    "        \n",
+    "        Without this function, find_in_file() will return False because even identical instances of the Student class will be different instances,\n",
+    "        so they won't truly *equal* each other.\n",
+    "        \n",
+    "        With this function, we say that `==` *really* means, in this case,\n",
+    "        \"first name is equal to first name, and last name is equal to last name\",\n",
+    "        and the function will return True if it does.\n",
+    "        \"\"\"\n",
+    "        return self.first_name == other.first_name \\\n",
+    "        and self.last_name == other.last_name\n",
+    "            \n",
+    "    \n",
+    "    def __len__(self): ## it's a dunder, so len(thing) --> thing.__len__()\n",
+    "        return len(self.courses)\n",
+    "      \n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        \"\"\"This has been fused quite often with the __str__() method.\n",
+    "        It also provides a string representation of the object,\n",
+    "        but this is how you'd like the object to be instantiated.\n",
+    "        Intended for other developers, not so much for users.\n",
+    "        \"\"\"\n",
+    "        return f\"Student('{self.first_name}, {self.last_name}', {self.courses})\"\n",
+    "    \n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return f\"First name: {self.first_name}, \\\n",
+    "        Last name: {self.last_name}, \\\n",
+    "        Courses: {', '.join(map(str.capitalize, self.courses))}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -847,33 +1080,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mashrur = Student('mashrur', 'hossain', ['python', 'ruby', 'javascript'])"
+    "bob = Student('bob', 'johnson', ['math', 'reading', 'writing'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Student' object has no attribute 'find_in_file'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-182-9d67c102405e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmashrur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_in_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Student' object has no attribute 'find_in_file'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Record already exists\n"
      ]
     }
    ],
    "source": [
-    "print(mashrur.find_in_file(file_name)) ## don't overwrite if it's already there\n",
-    "print(mashrur.add_to_file(file_name)) ## write to file if it's not"
+    "print(mashrur.add_to_file(file_name)) ## write to file if it's not already there"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mashrur.find_in_file(file_name)) ## don't overwrite if it's already there"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Record already exists'"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bob.add_to_file(file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mashrur,hossain:python,ruby,javascript\n",
+      "\n",
+      "john,doe:java,c++,c\n",
+      "\n",
+      "evgeny,rahman:ruby,rails,javascript\n",
+      "\n",
+      "bob,johnson:math,reading,writing\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"data.txt\") as f:\n",
+    "    for line in f:\n",
+    "        print(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bob.find_in_file(file_name)"
    ]
   },
   {
